force-app/main/default/objects/Marketing_Spend__c/fields/Sub_status__c.field-meta.xml
<CustomField>
    <fullName>Sub_status__c</fullName>
    <label>Sub-status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
                <default>true</default>
                <label>Not started</label>
            </value>
            <value>
                <fullName>Template in Progress</fullName>
            </value>
            <value>
                <fullName>Template Completed</fullName>
            </value>
            <value>
                <fullName>Test sent</fullName>
            </value>
            <value>
                <fullName>Pending Publishing Approval</fullName>
            </value>
            <value>
                <fullName>Rejected Publishing Approval</fullName>
            </value>
            <value>
                <fullName>Pending Product Approval</fullName>
            </value>
            <value>
                <fullName>Rejected Product Approval</fullName>
            </value>
            <value>
                <fullName>Finalized ready for Scheduling</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Deal Pulled Waiting for New Selection</fullName>
            </value>
            <value>
                <fullName>Brief in progress</fullName>
            </value>
            <value>
                <fullName>Brief ready for IKTP Submission</fullName>
            </value>
            <value>
                <fullName>Brief submitted to IKTP</fullName>
            </value>
            <value>
                <fullName>Finalised -Submitted to IKTP</fullName>
            </value>
            <value>
                <fullName>Ad Delivered</fullName>
            </value>
            <value>
                <fullName>Content Scheduled</fullName>
            </value>
            <value>
                <fullName>Hero Template chosen</fullName>
            </value>
            <value>
                <fullName>Final template in progress</fullName>
            </value>
            <value>
                <fullName>Finalised Ready for delivery</fullName>
            </value>
            <value>
                <fullName>Draft post in progress</fullName>
            </value>
            <value>
                <fullName>Draft post completed</fullName>
            </value>
            <value>
                <fullName>Brief sent to Thumpe Media</fullName>
            </value>
            <value>
                <fullName>Script received from Thumpe Media</fullName>
            </value>
            <value>
                <fullName>Finalised ready for submission to Thumpe media</fullName>
            </value>
            <value>
                <fullName>Confirm Approval with Thumpe media</fullName>
            </value>
            <value>
                <fullName>Finalised ready for ad creation</fullName>
            </value>
            <value>
                <fullName>Ad scheduled</fullName>
            </value>
            <value>
                <fullName>Finalised ready for Completion</fullName>
            </value>
            <value>
                <fullName>Banner set live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>