force-app/main/default/objects/Marketing_Spend__c/fields/Title_Tableau__c.field-meta.xml
<CustomField>
    <fullName>Title_Tableau__c</fullName>
    <formula>Deal__r.title__c&amp;&quot; | TripADeal&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title | Tableau</label>
    <type>Text</type>
</CustomField>