force-app/main/default/objects/Marketing_Spend__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type Of Advertisement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Page Ad</fullName>
            </value>
            <value>
                <fullName>Strip Ad</fullName>
            </value>
            <value>
                <fullName>Solus</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>Half Page Ad</fullName>
                <label>Half Page</label>
            </value>
            <value>
                <fullName>Page 2</fullName>
            </value>
            <value>
                <fullName>Page 3</fullName>
            </value>
            <value>
                <fullName>Strap Ad</fullName>
            </value>
            <value>
                <fullName>Blurb</fullName>
            </value>
            <value>
                <fullName>Platinum Wrap - Front Cover</fullName>
            </value>
            <value>
                <fullName>Platinum Wrap - Back cover</fullName>
            </value>
            <value>
                <fullName>Platinum Wrap - Page 2</fullName>
            </value>
            <value>
                <fullName>Platinum Wrap - Page 3</fullName>
            </value>
            <value>
                <fullName>Mega Wrap - Front Cover</fullName>
            </value>
            <value>
                <fullName>Mega Wrap - Back Cover</fullName>
            </value>
            <value>
                <fullName>Mega Wrap - IFC</fullName>
            </value>
            <value>
                <fullName>Mega Wrap - IBC</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>LARGE FORMAT</fullName>
            </value>
            <value>
                <fullName>15&quot;, 30&quot;</fullName>
            </value>
            <value>
                <fullName>30&quot; x 2</fullName>
            </value>
            <value>
                <fullName>30&quot;</fullName>
            </value>
            <value>
                <fullName>Ad Words</fullName>
                <isActive>false</isActive>
                <label>Ad Words</label>
            </value>
            <value>
                <fullName>Billboard</fullName>
                <isActive>false</isActive>
                <label>Billboard</label>
            </value>
            <value>
                <fullName>Booklet</fullName>
                <isActive>false</isActive>
                <label>Booklet</label>
            </value>
            <value>
                <fullName>Broadsheet</fullName>
                <isActive>false</isActive>
                <label>Broadsheet</label>
            </value>
            <value>
                <fullName>Digital Display</fullName>
                <isActive>false</isActive>
                <label>Digital Display</label>
            </value>
            <value>
                <fullName>Double Page Spread (DPS)</fullName>
                <isActive>false</isActive>
                <label>Double Page Spread (DPS)</label>
            </value>
            <value>
                <fullName>Editorial</fullName>
                <isActive>false</isActive>
                <label>Editorial</label>
            </value>
            <value>
                <fullName>Flyers</fullName>
                <isActive>false</isActive>
                <label>Flyers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>