force-app/main/default/objects/Marketing_Spend__c/fields/Url_Tableau__c.field-meta.xml
<CustomField>
    <fullName>Url_Tableau__c</fullName>
    <formula>&quot;/deals/&quot;&amp; Deal__r.URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Url | Tableau</label>
    <type>Text</type>
</CustomField>