force-app/main/default/objects/Marketing_Spend__c/fields/X_Value__c.field-meta.xml
<CustomField>
    <fullName>X_Value__c</fullName>
    <formula>Spend__c * 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>