force-app/main/default/objects/Marketing_Spend__c/recordTypes/Newspaper.recordType-meta.xml
<RecordType>
    <fullName>Newspaper</fullName>
    <active>true</active>
    <label>Newspaper</label>
</RecordType>