force-app/main/default/objects/Marketing_Spend__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal_ID__c</columns>
    <columns>Finance_Invoice_Number__c</columns>
    <columns>Country__c</columns>
    <columns>Marketing_Channel__c</columns>
    <columns>Marketing_Source__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Spend__c</columns>
    <columns>Type__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>