force-app/main/default/objects/Marketing_Spend__c/listViews/NZ.listView-meta.xml
<ListView>
    <fullName>NZ</fullName>
    <columns>NAME</columns>
    <columns>Marketing_Source__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>New Zealand</value>
    </filters>
    <label>NZ</label>
</ListView>