force-app/main/default/objects/Marketing_Spend__c/listViews/Unscheduled_7_Days.listView-meta.xml
<ListView>
    <fullName>Unscheduled_7_Days</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Marketing_Channel__c</columns>
    <columns>Marketing_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Deal_ID__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Unscheduled - 7 Days</label>
</ListView>